[package]
name = "ccxt-binance"
version = "0.1.0"
authors = ["Alexander Irbis <irbis.labs@gmail.com>"]
edition = "2018"

[dependencies]
error-chain = "0.12.1"
failure = "*"
futures-preview = { version = "0.3.0-alpha.16", features = ["async-await", "nightly", "compat"] }
futures01 = { package = "futures", version = "0.1.27" }
#futures = "0.1.27"
reqwest = "0.9.17"
rust_decimal = "1.0.1"
serde = "1.0.92"
serde_json = "1.0.39"
# serde_tuple = "0.2.5"
smallvec = "0.6.9"
string_cache = "0.7.3"
tokio = "0.1.21"
url = "1.7.2"
url_serde = "0.2"
websocket = "0.22.4"
